[package]
name = "ntua_tonyc"
version = "0.1.0"
authors = ["Dimitris Karagiannis <Dimkar3000@gmail.com>"]
edition = "2018"

[lib]
name = "libtonyc"
path = "src/lib.rs"

[dependencies]
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
peekmore = "0.4.0"
bumpalo = {version = "3.2.0", features=["collections"]}
lazy_static = "1.4.0"

[[bin]]
name = "tonyc"
path = "src/main.rs"

