[package]
name = "ntua_tonyc"
version = "0.1.0"
authors = ["Dimitris Karagiannis <Dimkar3000@gmail.com>"]
edition = "2018"

[lib]
name = "libtonyc"
path = "src/lib.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }


[[bin]]
name = "tonyc"
path = "src/main.rs"

