[package]
name = "ntua_tonyc"
version = "0.1.0"
authors = ["Dimitris Karagiannis <Dimkar3000@gmail.com>"]
edition = "2018"

[lib]
name = "libtonyc"
path = "src/lib.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
colored = "1.9.3"
clap = { git = "https://github.com/clap-rs/clap/" }

[[bin]]
name = "tonyc"
path = "src/main.rs"

